tests/baselines/reference/awaitCallExpressionInSyncFunction.errors.txt
tests/cases/compiler/awaitCallExpressionInSyncFunction.ts(2,16): error TS2311: Cannot find name 'await'. Did you mean to write this in an async function?


==== tests/cases/compiler/awaitCallExpressionInSyncFunction.ts (1 errors) ====
    function foo() {
       const foo = await(Promise.resolve(1));
                   ~~~~~
!!! error TS2311: Cannot find name 'await'. Did you mean to write this in an async function?
       return foo;
    }
    